- Fix coordinates and Z-position for joystick events (Markus Juergens).
- Fix size of the font returned by wxTextCtrl::GetStyle() (Igor Korot).
- Add wxActiveXContainer::QueryClientSiteInterface and implement it in
  wxWebViewIE to improve the default behaviour (Allonii).
- Update stretchable spaces in wxToolBar after tool removal (Catalin Raceanu).

OSX:

- Provide native implementations of wxDatePickerCtrl and wxTimePickerCtrl.
- Fix handling of positional parameters in wxPrintf() &c (David Connet).

Univ:

- Fix regression with read-only wxComboBox appearance (Jason Erb).
- Implement wxThread::SetConcurrency() for POSIX systems (Igor Korot).



2.9.3: (released 2011-12-14)
------

INCOMPATIBLE CHANGES SINCE 2.9.2

- wxPanel::SetBackgroundBitmap() was removed, derive your class from
  wxCustomBackgroundWindow and use its method with the same name instead.

All:

- Fix parsing of negated long options in wxCmdLineParser (roed_bis).
- Fix crash in wxArray::insert() overload taking iterator range (wsu).
- Added wxEventFilter class and wxEvtHandler::{Add,Remove}Filter().
- Added convenient wxCmdLineParser::AddLong{Option,Switch}() wrappers.
- Added wxStopWatch::TimeInMicro() and wxGetUTCTimeUSec() and improved
  wxStopWatch precision.
- Made wxGetLocalTimeMillis() really return local time, added
  wxGetUTCTimeMillis() returning what this function used to return.
- Added wxCriticalSection::TryEnter() (Catalin Raceanu).
- Add support for OpenBSD to wxDialUpManager (brad0).
- Added wxEXEC_HIDE_CONSOLE flag.

All (GUI):

- Added wxWebView library (Steven Lamerton & Auria, GSoC 2011 project).
- Added wxTreeListCtrl class.
- Added wxTimePickerCtrl class.
- Added wxRichToolTip class.
- Added documented, public wxNavigationEnabled<> class.
- Added wxTextCtrl::PositionToCoords() (Navaneeth).
- Added support for wxHELP button to wxMessageDialog.
- Added wxBannerWindow class.
- Allow setting window shape to arbitrary wxGraphicsPath.